--- a/Allgorithmen/Allgorithmen.vcxproj.filters
+++ b/Allgorithmen/Allgorithmen.vcxproj.filters
@@ -15,15 +15,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="pch.h">
+    <ClInclude Include="Wurzel.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="pch.cpp">
+    <ClCompile Include="Allgorithmen.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="Allgorithmen.cpp">
+    <ClCompile Include="Wurzel.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
