--- a/Allgorithmen/Allgorithmen.vcxproj
+++ b/Allgorithmen/Allgorithmen.vcxproj
@@ -23,32 +23,32 @@
     <ProjectGuid>{30678D37-0EF8-4D28-BCD6-03A7A3A07B6F}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Allgorithmen</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -151,18 +151,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="DG.h" />
     <ClInclude Include="GGT.h" />
     <ClInclude Include="Integral.h" />
     <ClInclude Include="Pi.h" />
     <ClInclude Include="PrimzahlenBisN.h" />
+    <ClInclude Include="Regression.h" />
     <ClInclude Include="Wurzel.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Allgorithmen.cpp" />
+    <ClCompile Include="DG.cpp" />
     <ClCompile Include="GGT.cpp" />
     <ClCompile Include="Integral.cpp" />
     <ClCompile Include="Pi.cpp" />
     <ClCompile Include="PrimzahlenBisN.cpp" />
+    <ClCompile Include="Regression.cpp" />
     <ClCompile Include="Wurzel.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
