--- a/Allgorithmen/Allgorithmen.vcxproj.filters
+++ b/Allgorithmen/Allgorithmen.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="DG.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="Gleichunssystem.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Allgorithmen.cpp">
@@ -60,6 +63,9 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="DG.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="Gleichunssystem.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
