--- a/Allgorithmen/Allgorithmen.vcxproj.filters
+++ b/Allgorithmen/Allgorithmen.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Gleichungssystem.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="Optimierung.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Allgorithmen.cpp">
@@ -66,6 +69,9 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="Gleichungssystem.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="Optimierung.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
